# gititis

./: .gitignore  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
gitosis/: gitweb.py  init.py  run_hook.py  serve.py
gitosis/test/: test_access.py  test_gitdaemon.py  test_gitweb.py  test_init.py  test_repository.py  test_run_hook.py  test_serve.py  test_ssh.py
src/gitosis/: __init__.py  access.py  app.py  gitdaemon.py  gitweb.py  group.py  init.py  repository.py  run_hook.py  serve.py  ssh.py  util.py
src/gitosis/templates/: __init__.py
tests/: test_access.py  test_gitdaemon.py  test_gitweb.py  test_group.py  test_init.py  test_repository.py  test_run_hook.py  test_serve.py  test_ssh.py  util.py
