#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gititis"
dynamic = ["version"]
description = "Software for maintaining git repositories (a fork of gitosis)"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = []
license = " GPL-2.0-or-later"
license-files = ["COPYING"]
authors = [{ name = "Tommi Virtanen", email = "tv@eagain.net" }]
maintainers = [{ name = "Keith Gaughan", email = "keith@gaughan.ie" }]

[project.urls]
Documentation = "https://github.com/kgaughan/gititis#readme"
Issues = "https://github.com/kgaughan/gititis/issues"
Source = "https://github.com/kgaughan/gititis"

[project.scripts]
gitosis-serve = "gitosis.serve:Main.run"
gitosis-run-hook = "gitosis.run_hook:Main.run"
gitosis-init = "gitosis.init:Main.run"

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.hatch.build.targets.sdist]
include = ["src/gitosis", "examples", "uv.lock"]

[tool.hatch.build.targets.wheel]
packages = ["src/gitosis"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/gitosis/_version.py"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC002",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "PLR0913", # Too many arguments
  "PLR2004", # Magic value used in comparison
  "PLW2901", # Redefined loop variable
  "S310",    # Audit URL open for permitted schemes
  "S317",    # Using xml to parse untrusted data is known to be vulnerable to XML attacks; use defusedxml equivalents
  "TID252",  # Prefer absolute imports over relative imports from parent modules
  "UP006",   # Use {to} instead of {from} for type annotation
  "UP035",   # Deprecated import
  "EM101",   # Exceptions must not use strings
  "EM102",   # Exception must not use f-string literal
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "E501"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=src/gitosis --junitxml=tests/results.xml --cov-report html"
junit_logging = "out-err"
junit_family = "xunit2"

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
ignore_errors = true
# Regexes for lines to exclude from consideration
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
]
